--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url=README.md" />
+</head>
+<body>
+    <h1>Redirecting to README.md...</h1>
+</body>
+</html>
